<resources>
    <string name="app_name">Settings</string>
    <string name="address">Home address</string>
    <string name="occupy">Career</string>
    <string name="settings">Settings</string>
    <string name="user_name">User name</string>
    <string name="todo">TODO</string>
    <string name="edit_profile_button">Edit Profile</string>
    <string name="e_mail">E-mail</string>
    <string name="let_s_get_acquainted">Let\'s get acquainted</string>
    <string name="fill_out_the_profile">Fill out the profile and go to the application!</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="register">Register</string>
    <string name="already_have_account">Already have account?</string>
    <string name="sign_in">Sign in</string>
    <string name="terms_n_and_conditions">By clicking Register you agree to our Terms \n and Conditions</string>
    <string name="go_to_settings_fill_prof">Go To settings and fill out the profile</string>
    <string name="view_my_contacts">View my contacts</string>
    <string name="required">Requied</string>
    <string name="invalid_email_address">Invalid email address</string>
    <string name="contacts">Contacts</string>
    <string name="add_contacts">Add contacts</string>
    <string name="phone">Phone</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="save">SAVE</string>
    <string name="paste_url">Paste url of image</string>
    <string name="url">URL</string>
    <string name="message">Message</string>
    <string name="profile">Profile</string>
    <string name="google">GOOGLE</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to_profile">Welcome to profile</string>
    <string name="edit_profile">Edit profile</string>


</resources>