<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/dark_blue"
    tools:context=".MainActivity">




    <View
        android:id="@+id/barFirstView"
        android:layout_width="351dp"
        android:layout_height="263dp"
        android:background="@color/dark_blue"
        app:layout_constraintBottom_toTopOf="@id/ViewBottomContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="0.5" />

    <View
        android:id="@+id/ViewBottomContainer"
        android:layout_width="wrap_content"
        android:layout_height="309dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_weight="0.5" />

    <TextView
        android:id="@+id/SettingsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="@dimen/medium"
        android:text="@string/settings"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <ImageView
        android:id="@+id/AvatarImageView"
        android:layout_width="113dp"
        android:layout_height="113dp"
        android:layout_marginBottom="132dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@+id/ViewBottomContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/nil" />

    <TextView
        android:id="@+id/UserNameTextView"
        android:layout_width="181dp"
        android:layout_height="50dp"
        android:layout_marginTop="@dimen/medium"
        android:fontFamily="@font/font_custom"
        android:gravity="center"
        android:text="@string/user_name"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/AvatarImageView"
        app:layout_constraintStart_toStartOf="@+id/AvatarImageView"
        app:layout_constraintTop_toBottomOf="@+id/AvatarImageView" />

    <TextView
        android:id="@+id/CareerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/font_custom"
        android:gravity="center"
        android:text="@string/occupy"
        android:textColor="@color/light_grey"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/UserNameTextView"
        app:layout_constraintStart_toStartOf="@+id/UserNameTextView"
        app:layout_constraintTop_toBottomOf="@+id/UserNameTextView" />

    <TextView
        android:id="@+id/HomeAddressTextView"
        android:layout_width="184dp"
        android:layout_height="24dp"
        android:layout_marginTop="@dimen/large"
        android:fontFamily="@font/font_custom"
        android:gravity="center"
        android:text="@string/address"
        android:textColor="@color/light_grey"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/CareerTextView"
        app:layout_constraintHorizontal_bias="0.527"
        app:layout_constraintStart_toStartOf="@+id/CareerTextView"
        app:layout_constraintTop_toBottomOf="@+id/UserNameTextView" />

    <ImageView
        android:id="@+id/FacebookImageView"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="92dp"
        android:layout_marginEnd="@dimen/large"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toStartOf="@+id/LinkedInImageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/LinkedInImageView"
        app:srcCompat="@drawable/fac" />

    <ImageView
        android:id="@+id/VKImageView"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="@dimen/large"
        android:layout_marginEnd="92dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/LinkedInImageView"
        app:layout_constraintTop_toTopOf="@+id/LinkedInImageView"
        app:srcCompat="@drawable/images" />

    <ImageView
        android:id="@+id/LinkedInImageView"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="68dp"
        android:contentDescription="@string/todo"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ViewBottomContainer"
        app:srcCompat="@drawable/in" />

    <TextView
        android:id="@+id/GoToSettingsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/go_to_settings_and_fill_out_the_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LinkedInImageView" />

    <Button
        android:id="@+id/EditProfileButton"
        android:layout_width="0dp"
        android:layout_height="58dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="@dimen/small"
        android:layout_marginEnd="@dimen/medium"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/font_custom"
        android:text="@string/edit_profile_button"
        android:textColor="@color/black"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/GoToSettingsTextView"
        app:strokeColor="@color/black"
        app:strokeWidth="2dp" />

    <Button
        android:id="@+id/ViewMyContactsButton"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginStart="@dimen/medium"
        android:layout_marginEnd="@dimen/medium"
        android:backgroundTint="@color/orange"
        android:text="@string/view_my_contacts"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditProfileButton" />




</androidx.constraintlayout.widget.ConstraintLayout>