<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintBottom_toTopOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <View
            android:id="@+id/vUpperBlue"
            android:layout_width="0dp"
            android:layout_height="@dimen/detail_view_height"
            android:background="@color/dark_blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/btnArrowBack"
            android:layout_width="@dimen/large"
            android:layout_height="@dimen/large"
            android:layout_marginVertical="@dimen/large"
            android:layout_marginStart="@dimen/large"
            android:backgroundTint="@color/dark_blue"
            android:contentDescription="@string/todo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/arrow_back" />

        <TextView
            android:id="@+id/tvAddContacts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large"
            android:text="@string/add_contacts"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnArrowBack"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivaAvatarInDialog"
            android:layout_width="@dimen/avatar_iv_size"
            android:layout_height="@dimen/avatar_iv_size"
            android:layout_marginTop="@dimen/avatar_iv_size"
            android:contentDescription="@string/todo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/me" />

        <ImageButton
            android:id="@+id/ibAddPhoto"
            android:layout_width="@dimen/recyclerview_image_size"
            android:layout_height="@dimen/recyclerview_image_size"
            android:layout_marginTop="@dimen/avatar_iv_size"
            android:background="@drawable/roundbutton"
            android:contentDescription="@string/todo"
            app:cornerRadius="100dp"
            app:layout_constraintEnd_toEndOf="@+id/vUpperBlue"
            app:layout_constraintStart_toEndOf="@+id/ivaAvatarInDialog"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_add_a_photo_24" />
<!--        <EditText-->
<!--            android:id="@+id/etPersonName"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="0dp"-->
<!--            android:layout_marginHorizontal="@dimen/large"-->
<!--            android:layout_marginTop="@dimen/largest"-->
<!--            android:autofillHints=""-->
<!--            android:ems="10"-->
<!--            android:inputType="textPersonName"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/vUpperBlue" />-->

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:id="@+id/tilName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/large"
            android:layout_marginTop="@dimen/large"
            android:hint="@string/user_name"
            android:minEms="10"
            app:boxBackgroundColor="@color/white"
            android:inputType="text"
            android:maxLines="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vUpperBlue">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPersonName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName|text"/>
        </com.google.android.material.textfield.TextInputLayout>






        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilCareer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/large"
            android:layout_marginTop="@dimen/large"
            android:hint="@string/occupy"
            android:minEms="10"
            app:boxBackgroundColor="@color/white"
            android:inputType="text"
            android:maxLines="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etOccupy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/large"
            android:layout_marginTop="@dimen/large"
            android:hint="@string/e_mail"
            android:minEms="10"
            app:boxBackgroundColor="@color/white"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilCareer">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/large"
            android:layout_marginTop="@dimen/large"
            android:hint="@string/phone"
            android:minEms="10"
            app:boxBackgroundColor="@color/white"
            android:inputType="phone"
            android:maxLines="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilEmail">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/large"
            android:layout_marginTop="@dimen/large"
            android:hint="@string/address"
            android:minEms="10"
            app:boxBackgroundColor="@color/white"
            android:inputType="textPostalAddress"
            android:maxLines="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilPhone">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPostalAddress" />
        </com.google.android.material.textfield.TextInputLayout>




        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/large"
            android:layout_marginTop="@dimen/large"
            android:hint="@string/date_of_birth"
            android:minEms="10"
            app:boxBackgroundColor="@color/white"
            android:inputType="date"
            android:maxLines="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilAddress">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/large"
            android:backgroundTint="@color/orange"
            android:text="@string/save"
            android:layout_marginTop="@dimen/large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilData"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>